add ACL feature

--- a/src/app/pages/balancer/access-control-list/access-control-list.component.html
+++ b/src/app/pages/balancer/access-control-list/access-control-list.component.html
@@ -1,10 +1,10 @@
 <div class="card-content places">
   <div>
     <div class="title-header">
-      <span>QUẢN LÍ BACKEND</span>
+      <span>QUẢN LÍ ACCESS CONTROL LIST</span>
     </div>
     <div class="input-container">
-      <span>Tên Backend:</span>
+      <span>Tên acl:</span>
       <input
         class="custom-input"
         nbInput
