--- a/src/app/pages/balancer/frontend/frontend.component.html
+++ b/src/app/pages/balancer/frontend/frontend.component.html
@@ -1,17 +1,17 @@
 <div class="card-content places">
   <div>
     <div class="title-header">
-      <span>QUẢN LÍ BACKEND</span>
+      <span>QUẢN LÍ FRONTEND</span>
     </div>
     <div class="input-container">
-      <span>Tên Backend:</span>
+      <span>Tên Frontend:</span>
       <input
         class="custom-input"
         nbInput
         fieldSize="small"
         status="basic"
         type="text"
-        placeholder="Tìm theo tên backend..."
+        placeholder="Tìm theo tên frontend..."
         (keydown.enter)="onSearch($event)"
       />
     </div>
